Collada Export with 'Include Material Textures' selected crashes #40829

Closed
opened 2014-06-27 07:48:40 +02:00 by Esarai · 5 comments
Esarai commented 2014-06-27 07:48:40 +02:00 (Migrated from localhost:3001)

System Information

Windows XP SP2, Nvidia 320M

Blender Version
Broken: 2.68a, 2.71
Worked: (unknown)

Short description of error
Attempting to export the attached file as a Collada .dae with 'Include Material Textures' selected causes an immediate crash to desktop. All other options have no effect.

Exact steps for others to reproduce the error

UEFShambhala-Final.7z

  1. Open File
  2. File -> Export -> Collada (.dae)
  3. Select Apply Modifiers, Include Material Textures, Copy
  4. Give appropriate name, export.
  5. Wait for crash.
**System Information** Windows XP SP2, Nvidia 320M **Blender Version** Broken: 2.68a, 2.71 Worked: (unknown) **Short description of error** Attempting to export the attached file as a Collada .dae with 'Include Material Textures' selected causes an immediate crash to desktop. All other options have no effect. **Exact steps for others to reproduce the error** [UEFShambhala-Final.7z](https://archive.blender.org/developer/F95716/UEFShambhala-Final.7z) 1. Open File 2. File -> Export -> Collada (.dae) 3. Select Apply Modifiers, Include Material Textures, Copy 4. Give appropriate name, export. 5. Wait for crash.
Esarai commented 2014-06-27 07:48:40 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Esarai commented 2014-06-27 07:48:40 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @Esarai

Added subscriber: @Esarai
Bastien Montagne self-assigned this 2014-06-28 22:00:46 +02:00
Author

This issue was referenced by b5acd1aa87

This issue was referenced by b5acd1aa87dc145f69c342a593b25de8faf472e1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b5acd1aa87.

Closed by commit b5acd1aa87.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40829
No description provided.