Fix T40829: Collada Export with 'Include Material Textures' selected crashes.

Code would not check a texture did have a valid image pointer...